dist/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AP_Counselling_Start_Date__c</fullName>
        <label>zzAP - Counselling Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AccountReference__c</fullName>
        <description>Created by Oscar @ Impact Box, 10/08/2020</description>
        <label>Account Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active2021__c</fullName>
        <formula>Assignments20_21__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active 20-21</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AreaP2__c</fullName>
        <description>Created By Oscar @ Impact Box, 19/08/2020</description>
        <label>Area Phase 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Greater Manchester</fullName>
                </value>
                <value>
                    <fullName>Leeds</fullName>
                </value>
                <value>
                    <fullName>Liverpool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignments1920__c</fullName>
        <label>Assignments 19-20</label>
        <summaryFilterItems>
            <field>Assignment__c.StartDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>9/1/2019</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Assignment__c.StartDate__c</field>
            <operation>lessThan</operation>
            <value>8/1/2020</value>
        </summaryFilterItems>
        <summaryForeignKey>Assignment__c.School__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Assignments20_21__c</fullName>
        <label>Assignments 20-21</label>
        <summaryFilterItems>
            <field>Assignment__c.StartDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>9/1/2020</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Assignment__c.StartDate__c</field>
            <operation>lessThan</operation>
            <value>8/1/2021</value>
        </summaryFilterItems>
        <summaryForeignKey>Assignment__c.School__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AssignmentsEndingCurrentFY__c</fullName>
        <label>Assignments Ending Current FY</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssignmentsEndingPreviousFY__c</fullName>
        <label>Assignments Ending Previous FY</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bursary_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bursary Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CV_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CV - Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CV_Not_Allowing_External_Visitors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CV - Not Allowing External Visitors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments_About_TT__c</fullName>
        <label>Comments About TT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Corporate_Email__c</fullName>
        <label>Corporate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DBS_Expiry_Date__c</fullName>
        <label>DBS Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBS_Number__c</fullName>
        <label>DBS Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DBS_Status__c</fullName>
        <label>DBS Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Docs required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Tutor Date of Birth</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EEF_School__c</fullName>
        <label>EEF School</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Intervention</fullName>
                </value>
                <value>
                    <fullName>Control</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinanceContactEmail__c</fullName>
        <description>Created by Oscar @ Impact Box, 10/08/2020</description>
        <label>Finance Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FinanceContactName__c</fullName>
        <description>Created by Oscar @ Impact Box, 10/08/2020</description>
        <label>Finance Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funder_Last_Grant_Amount__c</fullName>
        <label>Funder - Last Grant Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Funder_Last_Grant_Date__c</fullName>
        <label>Funder - Last Grant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funder_Type__c</fullName>
        <label>Funder Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Prospective Funder</fullName>
                </value>
                <value>
                    <fullName>Previous Funder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GM_Higher_Hub__c</fullName>
        <label>GM Higher Hub</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bolton, Bury and Rochdale</fullName>
                </value>
                <value>
                    <fullName>Manchester</fullName>
                </value>
                <value>
                    <fullName>Oldham, Tameside and Stockport</fullName>
                </value>
                <value>
                    <fullName>Salford and Trafford</fullName>
                </value>
                <value>
                    <fullName>Wigan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GM_Higher_School_2017_18__c</fullName>
        <label>GM Higher School 2017-18</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Hours_2018_19__c</fullName>
        <label>Hours 2018-19</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inactive_Tutor__c</fullName>
        <description>Is this tutor currently inactive?</description>
        <label>Inactive Tutor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interview_Score__c</fullName>
        <description>Score received by the candidate in their interview.</description>
        <label>Interview Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvoiceContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Invoice Contact)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceEmail__c</fullName>
        <label>Invoice Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LA_Code__c</fullName>
        <label>LA Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LatestAssignmentEndDate__c</fullName>
        <description>Returns the highest related Assignment End Date</description>
        <label>Latest Assignment End Date</label>
        <summarizedField>Assignment__c.EndDate__c</summarizedField>
        <summaryForeignKey>Assignment__c.School__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sample Level field for use with Level feature. May be deleted or edited as needed.</description>
        <label>Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Households</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Likely_Month_of_Start__c</fullName>
        <label>Likely Month of Start 2019-20</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linked_Tutors__c</fullName>
        <description>Currently active tutors who have previously worked in the school.</description>
        <label>Linked Tutors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Local_Authority__c</fullName>
        <label>Local Authority</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Consent__c</fullName>
        <label>Marketing Consent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Month_of_Start__c</fullName>
        <label>Month of Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_Academy_Trust_Name__c</fullName>
        <label>Multi-Academy Trust Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Multi_academy_Trusts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi-academy Trusts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewSchool__c</fullName>
        <formula>AND(  npo02__OppAmountLastYear__c =0,  npo02__OppAmountThisYear__c &gt;0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&apos;New&apos; School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ofsted_Date__c</fullName>
        <label>Ofsted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ofsted_Rating__c</fullName>
        <label>Ofsted Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Requires Improvement</fullName>
                </value>
                <value>
                    <fullName>Inadequate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Own_DBS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Own DBS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance_Data__c</fullName>
        <label>Performance Data</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Primary_Subject_Knowledge_Score__c</fullName>
        <description>Maximum score is 9</description>
        <label>Primary Subject Knowledge Score /9</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_Sweet_Spot__c</fullName>
        <label>Priority - Sweet Spot</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pupil_Numbers_2018_19__c</fullName>
        <label>Pupil Numbers 2018-19</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating_Given_to_TT_2018_19__c</fullName>
        <label>Rating Given to TT 2018-19</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Excellent</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Satisfactory</fullName>
                </value>
                <value>
                    <fullName>Poor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Code__c</fullName>
        <label>Referral Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolTypePhase2__c</fullName>
        <label>School Type (Phase 2)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_General_Comments__c</fullName>
        <label>School - General Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Hours_2017_18__c</fullName>
        <label>Tuition Hours 2017-18</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_type__c</fullName>
        <label>School type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spend_2018_19__c</fullName>
        <label>Spend 2018-19</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Staff_Survey_2018_19__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has a contact filled in the staff survey for 2018-19?</description>
        <label>Staff Survey 2018-19?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subjects_2018_19__c</fullName>
        <label>Subjects 2018-19</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Maths</fullName>
                </value>
                <value>
                    <fullName>Primary Reading</fullName>
                </value>
                <value>
                    <fullName>Primary Writing</fullName>
                </value>
                <value>
                    <fullName>Secondary Maths</fullName>
                </value>
                <value>
                    <fullName>Secondary English</fullName>
                </value>
                <value>
                    <fullName>Secondary Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summer_Reception_19_Confirmed_attendance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summer Reception 19 Confirmed attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summer_Reception_2018__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summer Reception 2018</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summer_Reception_2019_Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summer Reception 2019 Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summer_Reception_2019_Invite_Sent__c</fullName>
        <label>Summer Reception 2019 Invite Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Summer_Reception_2019_Notes__c</fullName>
        <label>Summer Reception 2019 Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Summer_Reception_2019_Response__c</fullName>
        <label>Summer Reception 2019 Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summer_Reception_2019__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summer Reception 2019</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Summer_Reception_Thank_you_letter_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summer Reception Thank you letter sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supplier_Type__c</fullName>
        <label>Supplier Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trainers/Training</fullName>
                </value>
                <value>
                    <fullName>IT/Software</fullName>
                </value>
                <value>
                    <fullName>Office/Premises</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Finance/Accounting</fullName>
                </value>
                <value>
                    <fullName>Marketing/Advertising</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sw_Sp_Comments__c</fullName>
        <label>Sw Sp Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sw_Sp_Status__c</fullName>
        <label>Sw Sp Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Contact Made</fullName>
                </value>
                <value>
                    <fullName>Voicemail / Message Left</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Meeting Scheduled</fullName>
                </value>
                <value>
                    <fullName>Meeting Held</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>The_Right_Angle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The Right Angle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalOpportunitiesCurrentYear__c</fullName>
        <inlineHelpText>The number of opportunities  closed/won within the current Academic Year</inlineHelpText>
        <label>Total Opportunities Current Year</label>
        <summaryFilterItems>
            <field>Opportunity.CloseDate</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transition_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transition Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tuition_Hours_2014_15__c</fullName>
        <label>Tuition Hours 2014-15</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tuition_Hours_2016_17__c</fullName>
        <label>Tuition Hours 2016-17</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tuition_Hours_205_16__c</fullName>
        <label>Tuition Hours 2015-16</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tutors_2018_19__c</fullName>
        <label>Tutors 2018-19</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tutors__c</fullName>
        <description>Currently active tutors who have worked in this school</description>
        <label>Previous Tutors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>University_Course__c</fullName>
        <description>University course the tutor is undertaking</description>
        <label>University Course</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X2018_19_EOY_Meeting_Held__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has an EOY meeting happened at this school?</description>
        <label>2018-19 EOY Meeting Held</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X201920Assignments__c</fullName>
        <label>2019-20 # Assignments</label>
        <summaryFilterItems>
            <field>Assignment__c.StartDate__c</field>
            <operation>greaterOrEqual</operation>
            <value>9/1/2020</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Assignment__c.EndDate__c</field>
            <operation>lessOrEqual</operation>
            <value>9/1/2020</value>
        </summaryFilterItems>
        <summaryForeignKey>Assignment__c.School__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>X2019_20_Tuition__c</fullName>
        <label>Interested in 2019-20 Tuition?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2019_Churned_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2019 Churned School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2019_New_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2019 New School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2019_Sweet_Spot_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2019 Sweet Spot School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__One2OneContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary contact for the Account, or the One2One contact for a One2One account.</description>
        <inlineHelpText>The primary contact for the Account, or the One2One contact for a One2One account.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe01__SYSTEMIsIndividual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden system field: do not change.  Updated by automatic processes.</description>
        <inlineHelpText>Indicates whether or not this Account is special for Contacts (Household, One-to-One, Individual) vs a normal Account.</inlineHelpText>
        <label>_SYSTEM: IsIndividual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__SYSTEM_AccountType__c</fullName>
        <description>Hidden system field: do not change.  Updated by automatic processes.</description>
        <inlineHelpText>Indicates which Account Model this account is for: Household Account, One-to-One, or Individual (bucket).</inlineHelpText>
        <label>_SYSTEM: AccountType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__AverageAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>System field: do not change. Updated by automatic processes.</description>
        <inlineHelpText>Average won Opportunity amount related to this Account.  Updated automatically.</inlineHelpText>
        <label>Average Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year_Total__c</fullName>
        <inlineHelpText>The sum of won Opportunity amounts in the Best Gift Year for this Account.</inlineHelpText>
        <label>Best Gift Year Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year__c</fullName>
        <inlineHelpText>The year in which the largest total amount of won Opportunities related to this Account occurred.  See also Best Gift Year Total.</inlineHelpText>
        <label>Best Gift Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__FirstCloseDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <inlineHelpText>The earliest won Opportunity (by Close Date) with amount greater than zero related to this Account.</inlineHelpText>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Formal_Greeting__c</fullName>
        <inlineHelpText>For Household Accounts, uses fields of non-excluded, ordered related Contacts. Generated automatically.</inlineHelpText>
        <label>Formal Greeting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npo02__HouseholdPhone__c</fullName>
        <label>Household Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npo02__Informal_Greeting__c</fullName>
        <inlineHelpText>For Household Accounts, uses fields of non-excluded, ordered related Contacts. Generated automatically.</inlineHelpText>
        <label>Informal Greeting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npo02__LargestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <inlineHelpText>The largest amount of a won Opportunity related to this Account.</inlineHelpText>
        <label>Largest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastCloseDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <inlineHelpText>The most recent Close Date of a won Opportunity related to this Account with amount greater than zero.</inlineHelpText>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <inlineHelpText>The amount of the most recent (by Close Date) won Membership Opportunity (by Record Type) for this Account.</inlineHelpText>
        <label>Last Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <inlineHelpText>The most recent Close Date of a won Membership Opportunity (by Record Type) related to this Account.</inlineHelpText>
        <label>Last Membership Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipLevel__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <inlineHelpText>Membership level from most recent (by Close Date) won Membership Opportunity (by Record Type) related to this Account.&quot;</inlineHelpText>
        <label>Last Membership Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>